crates/ty_python_semantic/resources/mdtest/snapshots/invalid_await.md_-_Invalid_await_diagno…_-_Non-callable_`__awai…_(d78580fb6720e4ea).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid_await.md - Invalid await diagnostics - Non-callable `__await__`
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_await.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class NonCallableAwait:
 2 |     __await__ = 42
 3 | 
 4 | async def main() -> None:
 5 |     await NonCallableAwait()  # error: [invalid-await]
 6 | class BaseWithBadAwait:
 7 |     __await__ = 42
 8 | 
 9 | class InheritedNonCallableAwait(BaseWithBadAwait): ...
10 | 
11 | async def main() -> None:
12 |     await InheritedNonCallableAwait()  # error: [invalid-await]
```

# Diagnostics

```
error[invalid-await]: `NonCallableAwait` is not awaitable
 --> src/mdtest_snippet.py:2:5
  |
1 | class NonCallableAwait:
2 |     __await__ = 42
  |     --------- attribute defined here
3 |
4 | async def main() -> None:
5 |     await NonCallableAwait()  # error: [invalid-await]
  |           ^^^^^^^^^^^^^^^^^^
6 | class BaseWithBadAwait:
7 |     __await__ = 42
  |
info: `__await__` is not callable

```

```
error[invalid-await]: `InheritedNonCallableAwait` is not awaitable
  --> src/mdtest_snippet.py:12:11
   |
11 | async def main() -> None:
12 |     await InheritedNonCallableAwait()  # error: [invalid-await]
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
  ::: src/mdtest_snippet.py:7:5
   |
 5 |     await NonCallableAwait()  # error: [invalid-await]
 6 | class BaseWithBadAwait:
 7 |     __await__ = 42
   |     --------- attribute defined here
 8 |
 9 | class InheritedNonCallableAwait(BaseWithBadAwait): ...
   |
info: `__await__` is not callable

```
